feat: Added number of seats in driver profile page.

--- a/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
+++ b/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
@@ -113,6 +113,11 @@
         label="License plate"
         placeholder="Enter your license plate"
       ></app-value-input-string>
+
+      <app-value-input-string
+        label="Number of seats"
+        placeholder="Enter the number of seats"
+      ></app-value-input-string>
     </div>
 
     <div class="mt-10 flex flex-col gap-4">
