feat: Added FE validation.

--- a/voom-fe/src/app/shared/popup/change-password-dialog/change-password-dialog.html
+++ b/voom-fe/src/app/shared/popup/change-password-dialog/change-password-dialog.html
@@ -1,36 +1,28 @@
-<h2 mat-dialog-title class="text-xl font-medium text-gray-800 mb-10">
-  Change password
-</h2>
-<hr/>
+<h2 mat-dialog-title class="text-xl font-medium text-gray-800 mb-10">Change password</h2>
+<hr />
 <mat-dialog-content class="px-2 pt-10">
   <div class="flex flex-col gap-4">
     <app-value-input-string
-      label="New password"
-      placeholder="Enter new password"
-      type="password"
-    ></app-value-input-string>
+      [label]="'Password'"
+      [formControl]="passwordForm.controls.password1"
+      [hide]="true"
+    />
 
     <app-value-input-string
       label="Confirm new password"
-      placeholder="Confirm new password"
-      type="password"
+      [formControl]="passwordForm.controls.password2"
+      [hide]="true"
     ></app-value-input-string>
   </div>
 </mat-dialog-content>
 
 <mat-dialog-actions class="flex items-center justify-end gap-6 mt-12">
-  <button
-    type="button"
-    mat-button
-    mat-dialog-close
-    class="text-base px-6"
-  >
-    Cancel
-  </button>
+  <button type="button" mat-button mat-dialog-close class="text-base px-6">Cancel</button>
 
   <button
     type="button"
-    class="h-[56px] px-12 rounded-full bg-blue-950 text-white text-base font-medium hover:bg-blue-800 transition-colors cursor-pointer"
+    class="h-[56px] px-12 rounded-full text-base font-medium transition-colors bg-blue-950 text-white disabled:bg-gray-300 disabled:text-gray-500 disabled:cursor-not-allowed"
+    [disabled]="passwordForm.invalid"
   >
     Save
   </button>
