--- a/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
+++ b/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
@@ -15,10 +15,10 @@
       <h4 class="text-xs font-semibold text-gray-500 tracking-widest mb-6">GENERAL</h4>
 
       <div class="flex flex-col gap-6 mb-20">
-        <app-value-input-string label="Name" placeholder="Enter your name"></app-value-input-string>
+        <app-value-input-string label="Name" [formControl]="profileForm.controls.firstName"></app-value-input-string>
         <app-value-input-string
           label="Last Name"
-          placeholder="Enter your last name"
+          [formControl]="profileForm.controls.lastName"
         ></app-value-input-string>
       </div>
 
@@ -27,11 +27,11 @@
       <div class="flex flex-col gap-6">
         <app-value-input-string
           label="Phone"
-          placeholder="Enter your phone number"
+          [formControl]="profileForm.controls.phone"
         ></app-value-input-string>
         <app-value-input-string
           label="Address"
-          placeholder="Enter your address"
+          [formControl]="profileForm.controls.address"
         ></app-value-input-string>
       </div>
     </div>
@@ -42,7 +42,7 @@
       <div class="flex flex-col gap-6 mb-20">
         <app-value-input-string
           label="Email"
-          placeholder="Enter your email"
+          [formControl]="profileForm.controls.email"
         ></app-value-input-string>
 
         <button
