fix:  - responsive for driver history page  - reponsive navigation,  - added app.routes.constants file  - switched from routerLink to (click)

--- a/voom-fe/src/app/core/layout/header-kt1/header-kt1.css
+++ b/voom-fe/src/app/core/layout/header-kt1/header-kt1.css
@@ -6,3 +6,11 @@
 .mat-toolbar {
   min-height: 80px;
 }
+
+/* .mat-sidenav {
+  background-color: #34234a;
+} */
+
+mat-sidenav .mat-mdc-button {
+  color: white !important;
+}
