--- a/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
+++ b/voom-fe/src/app/authenticated/user/user-profile/user-profile.html
@@ -15,7 +15,10 @@
       <h4 class="text-xs font-semibold text-gray-500 tracking-widest mb-6">GENERAL</h4>
 
       <div class="flex flex-col gap-6 mb-20">
-        <app-value-input-string label="Name" [formControl]="profileForm.controls.firstName"></app-value-input-string>
+        <app-value-input-string
+          label="Name"
+          [formControl]="profileForm.controls.firstName"
+        ></app-value-input-string>
         <app-value-input-string
           label="Last Name"
           [formControl]="profileForm.controls.lastName"
