--- a/voom-fe/src/app/drivers/ride-history/components/ride-history-table/ride-history-table.html
+++ b/voom-fe/src/app/drivers/ride-history/components/ride-history-table/ride-history-table.html
@@ -1,13 +1,10 @@
-<mat-form-field
-  appearance="outline"
-  class="w-full max-w-[250px] ml-auto mr-auto mb-[20px] md:!hidden"
->
+<mat-form-field appearance="outline" class="w-full max-w-[250px] ml-auto mr-auto mb-5 md:hidden!">
   <mat-label>Sort By</mat-label>
   <mat-select [(value)]="selected" (selectionChange)="onSortChange($event)">
     @for (option of options; track option.value) {
-    <mat-option [value]="option.value">
-      {{ option.label }}
-    </mat-option>
+      <mat-option [value]="option.value">
+        {{ option.label }}
+      </mat-option>
     }
   </mat-select>
 </mat-form-field>
@@ -75,22 +72,21 @@
   <ng-container matColumnDef="fullRow">
     <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumnsRide.length">
       @if (expandedRow === row) {
-      <div class="p-[15px] flex flex-col md:items-start items-center w-full">
-        <div class="w-full h-[3px] bg-gray-200 mb-[30px] rounded-4xl"></div>
-        <h3 class="text-xl mb-[30px] md:text-left text-center">Passengers</h3>
-
-        <div class="flex flex-col md:block">
-          @for(passenger of row.passengers; track passenger.name) {
-          <div class="flex items-center gap-[10px] max-w-[200px] mb-[10px]">
-            <img src="assets/icons/free driver.png" alt="" class="w-[30px]" />
-            <p>{{`${passenger.name} ${passenger.lastname}`}}</p>
-            <br />
+        <div class="p-[15px] flex flex-col md:items-start items-center w-full">
+          <div class="w-full h-[3px] bg-gray-200 mb-[30px] rounded-4xl"></div>
+          <h3 class="text-xl mb-[30px] md:text-left text-center">Passengers</h3>
+          <div class="flex flex-col md:block">
+            @for(passenger of row.passengers; track passenger.name) {
+            <div class="flex items-center gap-2.5 max-w-[200px] mb-2.5">
+              <img ngSrc="assets/icons/free driver.png" alt="" class="w-[30px]" height="329" width="329"/>
+              <p>{{`${passenger.name} ${passenger.lastname}`}}</p>
+              <br />
+            </div>
+            }
           </div>
-          }
         </div>
-      </div>
       }
-      <div class="w-full h-[3px] bg-[#0f1e52] rounded-4xl hidden md:block"></div>
+      <div class="w-full h-[3px] bg-primary rounded-4xl hidden md:block"></div>
     </td>
   </ng-container>
 
