update forgot and reset password forms

--- a/voom-fe/src/app/unauthenticated/login/forgot-password/forgot-password.html
+++ b/voom-fe/src/app/unauthenticated/login/forgot-password/forgot-password.html
@@ -7,7 +7,7 @@
       </div>
       <div class="flex flex-col space-y-8">
         <app-value-input-string [label]="'Email'" [formControl]="form.controls.email"/>
-        <button matButton="filled" (click)="submit()">Continue</button>
+        <button matButton="filled" [disabled]="form.invalid" (click)="submit()">Continue</button>
       </div>
     </div>
   </div>
