--- a/voom-fe/src/app/unauthenticated/login/reset-password/reset-password.html
+++ b/voom-fe/src/app/unauthenticated/login/reset-password/reset-password.html
@@ -6,9 +6,9 @@
         <h1 class="text-xl text-center text-primary">Password reset</h1>
       </div>
       <div class="flex flex-col space-y-8">
-        <app-value-input-string [label]="'Password'" [formControl]="form.controls.password1"/>
+        <app-value-input-string [label]="'Password'" [formControl]="form.controls.password1" [hide]="true"/>
         <app-value-input-string [label]="'Repeat password'" [formControl]="form.controls.password2" [hide]="true"/>
-        <button matButton="filled" (click)="submit()">Continue</button>
+        <button matButton="filled" [disabled]="form.invalid" (click)="submit()">Continue</button>
       </div>
     </div>
   </div>
