--- a/voom-fe/src/app/unauthenticated/login/login.html
+++ b/voom-fe/src/app/unauthenticated/login/login.html
@@ -5,13 +5,13 @@
         <img [attr.src]="'assets/images/logo.png'" alt="Voom Logo" class="w-96"/>
         <h1 class="text-xl text-center text-primary">Sign in to continue</h1>
       </div>
-      <div class="flex flex-col space-y-4">
+      <div class="flex flex-col space-y-4" >
         <app-value-input-string [label]="'Email'" [formControl]="form.controls.email"/>
         <app-value-input-string [label]="'Password'" [formControl]="form.controls.password" [hide]="true"/>
         <div class="pb-4 flex justify-center">
           <h1 class="text-sm text-secondary cursor-pointer" (click)="forgotPassword()">Forgot password?</h1>
         </div>
-        <button matButton="filled" (click)="login()">Sign in</button>
+        <button matButton="filled" [disabled]="form.invalid" (click)="login()">Sign in</button>
       </div>
       <div class="flex justify-center space-x-2">
         <h1 class="text-sm text-center text-primary">Don't have an account?</h1>
