--- a/voom-fe/src/app/drivers/ride-history/driver-ride-history.html
+++ b/voom-fe/src/app/drivers/ride-history/driver-ride-history.html
@@ -1,19 +1,35 @@
 <app-header></app-header>
-<section class="max-w-[1200px] md:p-10 p-5 ml-auto mr-auto flex flex-col items-center">
-  <h2 class="text-xl mb-[50px]">Filter Rides</h2>
-  <form
-    class="flex flex-col md:flex-row items-center justify-between max-w-[800px] w-full mb-[50px]">
-    <app-value-input-date label="Date From" [formControl]="fromDate" class="mb-2.5"/>
-    <app-value-input-date label="Date To" [formControl]="toDate" class="mb-2.5"/>
-    <button matButton="filled" type="button" (click)="applyFilter()" class="z-0!">Filter</button>
-    <p></p>
-  </form>
-  <div class="w-full h-[3px] bg-primary rounded-4xl mb-[50px] md:hidden block"></div>
-
-  <app-ride-history-table
-    class="w-full flex flex-col items-center"
-    [startDate]="appliedFromDate"
-    [endDate]="appliedToDate"
-  ></app-ride-history-table>
+<section class="max-w-[1200px] md:p-10 p-5 ml-auto mr-auto">
+  <div
+    class="w-full flex md:flex-row flex-col md:gap-[0px] gap-[20px] justify-between mb-[50px] items-center"
+  >
+    <h1 class="text-2xl font-medium">Your Activity</h1>
+    <div class="flex md:flex-row flex-col gap-[20px]">
+      <app-value-input-date label="From" [formControl]="fromDate"></app-value-input-date>
+      <app-value-input-date label="To" [formControl]="toDate"></app-value-input-date>
+      <button
+        class="bg-primary text-white px-[30px] py-[10px] rounded-4xl cursor-pointer transition-colors duration-200 ease-in-out hover:bg-secondary"
+        (click)="applyFilter()"
+      >
+        Filter
+      </button>
+    </div>
+    <button mat-icon-button (click)="sort(true)">
+      <mat-icon>sort</mat-icon>
+    </button>
+  </div>
+  <div class="w-full rounded-4xl h-[3px] bg-primary mb-[50px]"></div>
+  @for(date of dates; track date) {
+  <div class="w-full flex flex-col items-start gap-[10px] mb-[50px]">
+    <h1 class="text-xl mb-[10px]">{{ date.toDateString() }}</h1>
+    <div class="w-full flex flex-col gap-[15px]">
+      @for (ride of RIDE_DATA; track ride) { @if(ride.date.getTime() === date.getTime()) {
+      <app-ride-accordion [ride]="ride"></app-ride-accordion>
+      } }
+    </div>
+  </div>
+  } @if(dates.length === 0) {
+  <p class="text-xl text-center text-gray-500">No rides found.</p>
+  }
 </section>
 <app-footer></app-footer>
