--- a/voom-app/app/src/main/res/layout/fragment_registration_personal.xml
+++ b/voom-app/app/src/main/res/layout/fragment_registration_personal.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?attr/fullscreenBackgroundColor"
-    android:theme="@style/ThemeOverlay.VoomApp.FullscreenContainer"
     android:id="@+id/fragment_registration_personal"
     tools:context=".unauthenticated.registration.RegistrationPersonalFragment">
 
@@ -156,5 +153,6 @@
         </LinearLayout>
 
     </LinearLayout>
+
 
 </FrameLayout>
