--- a/voom-app/app/src/main/res/layout/fragment_reset_password.xml
+++ b/voom-app/app/src/main/res/layout/fragment_reset_password.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment_login"
-    tools:context=".unauthenticated.login.LoginFragment">
+    android:id="@+id/fragment_reset_password"
+    tools:context=".unauthenticated.password.ResetPasswordFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,32 +33,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/login"
+                android:text="@string/reset_password"
                 android:textColor="@color/primary" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8pt"
-                android:hint="@string/email"
-                android:textColorHint="@color/primary"
-                app:boxBackgroundColor="@color/white"
-                app:boxBackgroundMode="outline"
-                app:boxCornerRadiusBottomEnd="32dp"
-                app:boxCornerRadiusBottomStart="32dp"
-                app:boxCornerRadiusTopEnd="32dp"
-                app:boxCornerRadiusTopStart="32dp"
-                app:boxStrokeColor="@color/primary"
-                app:boxStrokeErrorColor="@color/error"
-                app:boxStrokeWidth="2dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/email_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="8pt"
-                    android:inputType="textEmailAddress"/>
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -84,68 +60,39 @@
                     android:inputType="textPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingVertical="16dp">
+                android:layout_marginTop="8pt"
+                android:hint="@string/repeat_password"
+                android:textColorHint="@color/primary"
+                app:boxBackgroundColor="@color/white"
+                app:boxBackgroundMode="outline"
+                app:boxCornerRadiusBottomEnd="32dp"
+                app:boxCornerRadiusBottomStart="32dp"
+                app:boxCornerRadiusTopEnd="32dp"
+                app:boxCornerRadiusTopStart="32dp"
+                app:boxStrokeColor="@color/primary"
+                app:boxStrokeErrorColor="@color/error"
+                app:boxStrokeWidth="2dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/forgot_password"
-                    android:textColor="@color/primary" />
-
-                <TextView
-                    android:id="@+id/forgot_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="4dp"
-                    android:text="@string/reset_password"
-                    android:textColor="@color/secondary" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:paddingVertical="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/login"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/repeat_password_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/signin"
-                    android:textColor="@android:color/white"
-                    app:backgroundTint="@color/secondary"
-                    app:cornerRadius="32dp" />
-            </LinearLayout>
-            <LinearLayout
+                    android:padding="8pt"
+                    android:inputType="textPassword"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/reset_password_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingVertical="16dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/have_no_account"
-                    android:textColor="@color/primary" />
-
-                <TextView
-                    android:id="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="4dp"
-                    android:text="@string/register"
-                    android:textColor="@color/secondary" />
-
-            </LinearLayout>
+                android:layout_marginTop="16dp"
+                android:text="@string/submit"
+                android:textColor="@android:color/white"
+                app:backgroundTint="@color/secondary"
+                app:cornerRadius="32dp" />
 
         </LinearLayout>
 
