--- a/voom-app/app/src/main/res/layout/fragment_driver_profile.xml
+++ b/voom-app/app/src/main/res/layout/fragment_driver_profile.xml
@@ -162,9 +162,8 @@
                 android:inputType="none"
                 android:minHeight="56dp"
                 android:paddingStart="16dp"
-                android:paddingEnd="16dp"/>
+                android:paddingEnd="16dp" />
         </com.google.android.material.textfield.TextInputLayout>
-
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -196,18 +195,19 @@
                 android:minHeight="56dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <CheckBox
+        <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/cb_baby_transport"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
             android:text="@string/baby_transport_allowed" />
 
-        <CheckBox
+        <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/cb_pet_transport"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:gravity="center_vertical"
             android:text="@string/pet_transport_allowed" />
 
         <com.google.android.material.button.MaterialButton
