feat: driver ride history page mobiel - sorting - filtering - loading dynamically - adapter - pojos for passenger and ride
need more UI tweaks, otherwise fully funcitonal

--- a/voom-app/app/src/main/res/layout/fragment_driver_profile.xml
+++ b/voom-app/app/src/main/res/layout/fragment_driver_profile.xml
@@ -46,7 +46,8 @@
             style="@style/RoundedOutlinedInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/first_name">
+            android:hint="@string/first_name"
+            android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_first_name"
