--- a/voom-app/app/src/main/res/navigation/main_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/driverRideHistoryFragment">
 
 
     <fragment
@@ -50,7 +50,7 @@
         android:id="@+id/forgotPasswordFragment"
         android:name="inc.visor.voom.app.unauthenticated.password.ForgotPasswordFragment"
         android:label="fragment_forgot_password"
-        tools:layout="@layout/fragment_forgot_password" >
+        tools:layout="@layout/fragment_forgot_password">
         <action
             android:id="@+id/action_forgotPasswordFragment_to_resetPasswordFragment"
             app:destination="@id/resetPasswordFragment" />
@@ -59,9 +59,14 @@
         android:id="@+id/resetPasswordFragment"
         android:name="inc.visor.voom.app.unauthenticated.password.ResetPasswordFragment"
         android:label="fragment_reset_password"
-        tools:layout="@layout/fragment_reset_password" >
+        tools:layout="@layout/fragment_reset_password">
         <action
             android:id="@+id/action_resetPasswordFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/driverRideHistoryFragment"
+        android:name="inc.visor.voom.app.driver.history.DriverRideHistoryFragment"
+        android:label="fragment_driver_ride_history"
+        tools:layout="@layout/fragment_driver_ride_history" />
 </navigation>
