--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -8,4 +8,27 @@
         android:id="@+id/profileFragment"
         android:name="inc.visor.voom.app.user.profile.ProfileFragment"
         android:label="ProfileFragment" />
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="inc.visor.voom.app.unauthenticated.login.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment_to_registrationFragment"
+            app:destination="@id/registrationFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
+            app:destination="@id/forgotPasswordFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_mainUserFragment"
+            app:destination="@id/mainUserFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/driverRideHistoryFragment"
+        android:name="inc.visor.voom.app.driver.history.DriverRideHistoryFragment"
+        android:label="fragment_driver_ride_history" />
+
+
 </navigation>
